--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
                 <tr><td><label for="kort">Ort:</label></td><td><input type="text" id="kort" name="kort" oninput="copyAddress()" required></td></tr>
 		<tr><td>Lieferadresse (bei Abweichung anzupasssen)</td></tr>
 		<tr><td><label for="lstr">Straße u. Hausnummer:</label></td><td><input type="text" id="lstr" name="lstr" required></td></tr>
-                <tr><td><label for="lplz">PLZ:</label></td><td><input type="number" id="lplz" name="lplz" oninput="fetchCity()" required></td></tr>
+                <tr><td><label for="lplz">PLZ:</label></td><td><input type="number" id="lplz" name="lplz" oninput="fetchCity2()" required></td></tr>
                 <tr><td><label for="lort">Ort:</label></td><td><input type="text" id="lort" name="lort" required></td></tr>
                 <tr><td>Angaben zur Strombelieferung</td></tr>
 		<tr><td><label for="stromversorger">Stromversorger:</label></td><td><input list="stromversorger-list" id="stromversorger" name="stromversorger" required><datalist id="stromversorger-list"></datalist></td></tr>
@@ -172,46 +172,6 @@
             <button type="submit">PDF generieren</button>
         </form>
     </div>
-<script>
-function fetchBankDetails() {
-    const ibanField = document.getElementById("iban");
-    const banknameField = document.getElementById("bankname");
-    const bicField = document.getElementById("bic");
-
-    if (banknameField.value.trim() === "") {
-        const iban = ibanField.value.trim();
-
-        // Prüfen, ob die IBAN gültig aussieht (mind. 15 Zeichen)
-        if (iban.length < 15) {
-            console.error("IBAN zu kurz oder ungültig.");
-            return;
-        }
-
-        // API-URL mit deinem eigenen Service
-        const apiUrl = `https://fetchbankdetails.onrender.com/api/check/${iban}`;
-
-        fetch(apiUrl)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP-Fehler! Status: ${response.status}`);
-                }
-                return response.json();
-            })
-            .then(data => {
-                if (data.success) {
-                    banknameField.value = data.bankname || "Unbekannte Bank";
-                    bicField.value = data.bic || "";
-                } else {
-                    console.error("Fehler bei der API-Abfrage:", data.message || "Unbekannter Fehler");
-                }
-            })
-            .catch(error => console.error("API-Fehler:", error));
-    }
-}
-
-// Event-Listener für das IBAN-Feld hinzufügen
-document.getElementById("iban").addEventListener("blur", fetchBankDetails);
-</script>
 	
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -264,67 +224,86 @@ function copyAddress() {
 </script>
 
 <script>
-async function fetchCity(plz, ortFeld) {
-    if (plz.length === 5) {
-        try {
-            const response = await fetch(`https://api.zippopotam.us/de/${plz}`);
-            if (!response.ok) throw new Error("Keine Daten gefunden");
-            const data = await response.json();
-            document.getElementById(ortFeld).value = data.places[0]["place name"] || "";
-        } catch (error) {
+    function fetchCity() {
+      const plz = document.getElementById("kplz").value.trim();
+
+      // In Deutschland hat die PLZ genau 5 Stellen.
+      if (plz.length === 5) {
+        fetch(`https://api.zippopotam.us/de/${plz}`)
+          .then(response => {
+            if (!response.ok) {
+              throw new Error("Keine Daten gefunden");
+            }
+            return response.json();
+          })
+          .then(data => {
+            if (data.places && data.places.length > 0) {
+              // Das erste Element enthält in der Regel den gewünschten Ortsnamen.
+              document.getElementById("kort").value = data.places[0]["place name"];
+		document.getElementById("lort").value = data.places[0]["place name"];
+            } else {
+              document.getElementById("kort").value = "";
+            }
+          })
+          .catch(error => {
             console.error("Fehler beim Abrufen des Orts:", error);
-            document.getElementById(ortFeld).value = "";
+            document.getElementById("kort").value = "";
+          });
+      } else {
+        // Falls die PLZ nicht 5 Zeichen hat, den Ortswert zurücksetzen.
+        document.getElementById("kort").value = "";
+      }  
+    }
+    
+    async function validateIban() {
+    const ibanField = document.getElementById("iban");
+    const bankField = document.getElementById("bankname");
+    const bicField = document.getElementById("bic");
+    const iban = ibanField.value.replace(/\s+/g, ""); // Leerzeichen entfernen
+    const ibanRegex = /^[A-Z]{2}[0-9]{2}[A-Z0-9]{10,30}$/;
+
+    if (!ibanRegex.test(iban)) {
+        ibanField.setCustomValidity("Ungültige IBAN");
+        return;
+    }
+
+    try {
+        const response = await fetch(`https://openiban.com/validate/${iban}?getBIC=true&validateBankCode=true`);
+        const data = await response.json();
+
+        if (data.valid && data.bankData) {
+            bankField.value = data.bankData.name || "";
+            bicField.value = data.bankData.bic || "";
+        } else {
+            // Falls keine Daten von openiban → Fallback-API
+            await fetchBankDetailsFallback(iban);
         }
-    } else {
-        document.getElementById(ortFeld).value = "";
+    } catch (error) {
+        console.error("Fehler bei OpenIBAN:", error);
+        await fetchBankDetailsFallback(iban); // Falls API-Aufruf fehlschlägt → Fallback
     }
 }
 
-document.getElementById("kplz").addEventListener("input", () => fetchCity(document.getElementById("kplz").value, "kort"));
-document.getElementById("lplz").addEventListener("input", () => fetchCity(document.getElementById("lplz").value, "lort"));
-</script>
+async function fetchBankDetailsFallback(iban) {
+    const bankField = document.getElementById("bankname");
+    const bicField = document.getElementById("bic");
 
-	
-        <script>
-    async function validateIban() {
-      const ibanInput = document.getElementById('iban');
-      const bicInput = document.getElementById('bic');
-      const banknameInput = document.getElementById('bankname');
-      const iban = ibanInput.value.trim();
-
-      // Mindestlänge prüfen (variabel je nach Land, hier als Beispiel 15 Zeichen)
-      if (iban.length < 15) {
-        bicInput.value = "";
-        banknameInput.value = "";
-        return;
-      }
-
-      // URL zur OpenIBAN API zusammenbauen
-      const url = `https://openiban.com/validate/${iban}?getBIC=true&validateBankCode=true`;
-
-      try {
-        const response = await fetch(url);
-        if (!response.ok) {
-          throw new Error("Netzwerkantwort war nicht ok");
-        }
+    try {
+        const response = await fetch(`https://fetchbankdetails.onrender.com/api/check/${iban}`);
         const data = await response.json();
 
-        // Wenn die IBAN validiert wurde und Bankdaten vorhanden sind, vorbefüllen
-        if (data.valid && data.bankData) {
-          bicInput.value = data.bankData.bic || "";
-          banknameInput.value = data.bankData.name || "";
+        if (data.bankName || data.bic) {
+            bankField.value = data.bankName || "";
+            bicField.value = data.bic || "";
         } else {
-          bicInput.value = "";
-          banknameInput.value = "";
+            throw new Error("Keine Bankdaten gefunden");
         }
-      } catch (error) {
-        console.error("Fehler bei der IBAN-Validierung:", error);
-        bicInput.value = "";
-        banknameInput.value = "";
-      }
+    } catch (error) {
+        console.error("Fehler bei Fallback-API:", error);
     }
-  </script>
-	
-	<script> document.addEventListener("DOMContentLoaded", function() { document.getElementById("datum").value = new Date().toLocaleDateString("de-DE"); }); document.getElementById("pdfForm").addEventListener("submit", async function(event) { event.preventDefault(); const formData = new FormData(this); const jsonData = {}; formData.forEach((value, key) => jsonData[key] = value); const response = await fetch("https://lvbstrom.onrender.com/fill-pdf", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(jsonData) }); if (response.ok) { const blob = await response.blob(); const url = window.URL.createObjectURL(blob); const a = document.createElement("a"); a.href = url; a.download = "filled-form.pdf"; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); } else { alert("Fehler beim Generieren der PDF."); } }); </script>
+}
+document.getElementById("iban").addEventListener("input", validateIban);
+
+document.addEventListener("DOMContentLoaded", function() { document.getElementById("datum").value = new Date().toLocaleDateString("de-DE"); }); document.getElementById("pdfForm").addEventListener("submit", async function(event) { event.preventDefault(); const formData = new FormData(this); const jsonData = {}; formData.forEach((value, key) => jsonData[key] = value); const response = await fetch("https://lvbstrom.onrender.com/fill-pdf", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(jsonData) }); if (response.ok) { const blob = await response.blob(); const url = window.URL.createObjectURL(blob); const a = document.createElement("a"); a.href = url; a.download = "filled-form.pdf"; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); } else { alert("Fehler beim Generieren der PDF."); } }); </script>
 </body>
 </html>
