--- a/public/index.html
+++ b/public/index.html
@@ -174,8 +174,7 @@
     </div>
     
     <script>
-	document.addEventListener("DOMContentLoaded", function getLocation()
-        function getLocation() {
+	document.addEventListener("DOMContentLoaded", function getLocation() {
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(showPosition, showError);
             } else {
