--- a/public/index.html
+++ b/public/index.html
@@ -318,19 +318,19 @@ document.getElementById("iban").addEventListener("input", function () {
     const ibanField = document.getElementById("iban");
     const bankField = document.getElementById("bankname");
     const bicField = document.getElementById("bic");
-    const iban = ibanField.value.replace(/\s+/g, ""); // Leerzeichen entfernen
+    const piban = ibanField.value.replace(/\s+/g, ""); // Leerzeichen entfernen
     const ibanRegex = /^[A-Z]{2}[0-9]{2}[A-Z0-9]{10,30}$/;
     bicField.value = "";
     bankField.value = "";
 	    
-    if (!ibanRegex.test(iban)) {
+    if (!ibanRegex.test(piban)) {
         ibanField.setCustomValidity("Ungültige IBAN");
     } else {
        ibanField.setCustomValidity(""); // Fehler zurücksetzen
     }
 
     try {
-        const response = await fetch(`https://openiban.com/validate/${iban}?getBIC=true&validateBankCode=true`);
+        const response = await fetch(`https://openiban.com/validate/${piban}?getBIC=true&validateBankCode=true`);
         const data = await response.json();
 
         if (data.valid && data.bankData) {
@@ -338,20 +338,20 @@ document.getElementById("iban").addEventListener("input", function () {
             bicField.value = data.bankData.bic || "";
         } else {
             // Falls keine Daten von openiban → Fallback-API
-            await fetchBankDetailsFallback(iban);
+            await fetchBankDetailsFallback(piban);
         }
     } catch (error) {
         console.error("Fehler bei OpenIBAN:", error);
-        await fetchBankDetailsFallback(iban); // Falls API-Aufruf fehlschlägt → Fallback
+        await fetchBankDetailsFallback(piban); // Falls API-Aufruf fehlschlägt → Fallback
     }
 }
 
-async function fetchBankDetailsFallback(iban) {
+async function fetchBankDetailsFallback(piban) {
     const bankField = document.getElementById("bankname");
     const bicField = document.getElementById("bic");
 
     try {
-        const response = await fetch(`https://fetchbankdetails.onrender.com/api/check/${iban}`);
+        const response = await fetch(`https://fetchbankdetails.onrender.com/api/check/${piban}`);
         const data = await response.json();
 
         if (data.error === false && data.details) {
