--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
             <table>
                 <tr><td><label for="kundentyp">Kundentyp:</label></td>
                     <td>
-                        <select id="kundentyp" name="kundentyp">
+                        <select id="kundentyp" onchange="toggleFirma()" name="kundentyp">
                             <option value="privat">Privatkunde</option>
                             <option value="geschaeft">Geschäftskunde</option>
                         </select>
