--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
         const kundentyp = document.getElementById("kundentyp").value;
         const firmaField = document.getElementById("firma-field");
 
-        if (kundentyp === "firma") {
+        if (kundentyp === "geschaeft") {
             firmaField.style.display = "block";
         } else {
             firmaField.style.display = "none";
