--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                         </select>
                     </td>
                 </tr>
-		<tr><td><div id="firma" style="display: none;"><label for="firma">Firma:</label></td><td><input type="text" id="firma" name="firma"></div></td></tr>
+		<tr id="firma" style="display: none;"><td><label for="firma">Firma:</label></td><td><input type="text" id="firma" name="firma"></td></tr>
 		<tr><td><label for="kvorname">Vorname:</label></td><td><input type="text" id="kvorname" name="kvorname" required></td></tr>
                 <tr><td><label for="knachname">Nachname:</label></td><td><input type="text" id="knachname" name="knachname" required></td></tr>
 		<tr><td><label for="geburtstag">Geburtstag:</label></td><td><input type="date" id="geburtstag" name="geburtstag"></td></tr>
@@ -180,7 +180,7 @@
         const firmaField = document.getElementById("firma");
 
         if (kundentyp === "geschaeft") {
-            firmaField.style.display = "block";
+            firmaField.style.display = "table-row";
         } else {
             firmaField.style.display = "none";
         }
