--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landvolk Betriebsmittel GmbH<br>Formular Stromberatungsvertrag</title>
+    <title>Landvolk Betriebsmittel GmbH - Formular Stromberatungsvertrag</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>PDF Formular Befüllung</h2>
+        <h2>Landvolk Betriebsmittel GmbH<br>Formular Stromberatungsvertrag</h2>
         <form id="pdfForm">
             <table>
                 <tr><td><label for="kundentyp">Kundentyp:</label></td>
