--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
 		<tr><td><label for="fax">Fax:</label></td><td><input type="number" id="fax" name="fax"></td></tr>
                 <tr><td><label for="email">E-Mail (für Rechnungen):</label></td><td><input type="email" id="email" name="email"></td></tr>
                 <tr><td><label for="ort">aktueller Ort (für den Vertrag):</label></td><td><input type="text" id="ort" name="ort" required></td></tr>
-		<tr><td><label for="datum">aktuelles Datum:</label></td><td><input type="text" id="datum" name="datum" required></td></tr>
+		<tr style="display: none;"><td><label for="datum">aktuelles Datum:</label></td><td><input type="text" id="datum" name="datum" required></td></tr>
 	    </table>
             <button type="submit">PDF generieren</button>
         </form>
